# cisa_kev

./: .gitignore  Makefile  README.md  example-cve-ids.txt  known_exploited_vulnerabilities.json  pyproject.toml  requirements.txt
cisa_kev/: __init__.py  __main__.py  cli.py  client.py  kev.py  pattern_matching.py  util.py
data/: cve_ids.txt  dates_added.json  due_dates.json  important_dates.jsonl  known_exploited_vulnerabilities.json  known_exploited_vulnerabilities.jsonl  known_exploited_vulnerabilities_processed.json  known_exploited_vulnerabilities_processed.jsonl  ransomware_cve_ids.txt
examples/: list-ransomware-related-microsoft-vulnerabilities-with-pandas.py  list-ransomware-related-microsoft-vulnerabilities-with-polars-sql.py
